syntax = "proto3";
package proto;

option go_package = "../;proto";

// 用户基本信息
message User {
    int64 UserId = 1;
    string Name = 2;
    string Application = 3;
    int32 ReviewStatus = 4;
}

// 用户登录请求
message UserLoginRequest {
    int64 UserId = 1;
    int64 UserPassword = 2;
}
message UserLoginResponse {
    int32 StatusCode = 1;
    string StatusMsg = 2;
}

// 用户注册
message UserRegisterRequest {
    int64 UserId = 1;
    int64 UserPassword = 2;
}
message UserRegisterResponse {
    int32 StatusCode = 1;
    string StatusMsg = 2;
}

// 用户信息
message UserGetInfoRequest {
    int64 UserId = 1;
    int64 UserPassword = 2;
}
message UserGetInfoResponse {
    int32 StatusCode = 1;
    string StatusMsg = 2;
    User user = 3;
}

service UserService {
    rpc Login(UserLoginRequest) returns (UserLoginResponse);
    rpc Register(UserRegisterRequest) returns (UserRegisterResponse);
    rpc GetInfo(UserGetInfoRequest) returns (UserGetInfoResponse);
}